--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,21 @@ input,
 select,
 textarea{
   font-size: 1.6rem;
-
 }
 
-.App {
-  text-align: center;
+.content{
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main{
+  flex:3 60rem;
 }
+
+.sidebar{
+  flex: 1 20rem;
+}
+
 .grid-container{
   display: grid;
   grid-template-areas:
@@ -24,6 +28,7 @@ textarea{
   grid-template-columns: 1fr;
   height: 100vh;
 }
+
 header{
   grid-area: header;
   background-color: #203040;
@@ -49,33 +54,4 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
-}
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
