--- a/src/index.css
+++ b/src/index.css
@@ -11,43 +11,114 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-.products{
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-padding: 0;
-margin: 0;
-list-style-type: none;
-}
-.products li{
-  flex: 1 1 29rem;
-  height: 47rem;
-  padding: 1rem;
-  margin: 1rem;
-}
-.product {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+body,
+input,
+select,
+button,
+textarea{
+  font-size: 1.6rem;
 }
 
-.product img{
-  max-width: 37rem;
-  max-height: 37rem;
-}
-.product-price{
+.content{
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.main{
+  flex:3 60rem;
+}
+
+.sidebar{
+  flex: 1 20rem;
+}
+
+.grid-container{
+  display: grid;
+  grid-template-areas:
+  'header'
+  'main'
+  'footer';
+  grid-template-rows: 5rem 1fr 5rem;
+  grid-template-columns: 1fr;
+  height: 100vh;
+}
+
+header{
+  grid-area: header;
+  background-color: #203040;
+  color:#ffffff;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem
+}
+header a{
+  color:#ffffff;
+  text-decoration: none;
+}
+a:hover{
+  color:aqua;
+}
+main{
+  grid-area: main;
+}
+footer{
+  grid-area: footer;
+  background-color: #203040;
+  color:#ffffff;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
-.product-price div,
-.product-price button{
-  text-align: center;
-}
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  }
+  .products li{
+    flex: 1 1 29rem;
+    height: 47rem;
+    padding: 1rem;
+    margin: 1rem;
+    width: 27%;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  
+  .product img{
+    max-width: 37rem;
+    max-height: 37rem;
+  }
+  .product-price{
+    display: flex;
+    align-items: center;
+  }
+  .product-price div,
+  .product-price button{
+    text-align: center;
+    padding: 20px;
+  }
+  
+  .product-price div{
+    font-size: 2rem;
+  }
 
-.product-price div{
-  font-size: 2rem;
-}
+  /* filter */
+
+  .filter {
+    display: flex;
+    padding: 1rem;
+    margin: 1rem;
+    border-bottom: 0.1rem #c0c0c0 solid; 
+    justify-content: space-between;
+  }
+  .filter div{
+    flex: 1;
+  }
